<resources>
    <string name="app_name">Hola Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="holaUsuario">Hola Usuario</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Nombre</string>
    <string name="title_activity_saludo">SaludoActivity</string>
    <string name="title_activity_layout">Layout</string>
    <string name="layout">Layout</string>
    <string name="botones">Botones</string>
    <string name="botonesTexto">Botones Texto</string>
    <string name="insertarTexto">Insertar Texto</string>
    <string name="frameLayout">Frame Layout</string>
    <string name="linearLayout">Linear Layout</string>
    <string name="tableLayout">Table Layout</string>
    <string name="gridLayout">Grid Layout</string>
    <string name="relativeLayout">Relative Layout</string>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>
    <string name="title_activity_grid_layout">GridLayoutActivity</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="title_activity_relative_layout">RelativeLayoutActivity</string>
    <string name="title_activity_botones">BotonesActivity</string>
    <string name="click">Click</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="icono_ok">OK</string>
    <string name="title_activity_hola_usuario">HolaUsuarioActivity</string>
    <string name="title_activity_controles_texto">ControlesTextoActivity</string>
    <string name="imagen_ejemplo">Imagen ejemplo</string>
    <string name="lblEtiqueta">Etiqueta</string>
    <string name="telefono">Introduzca Teléfono</string>
    <string name="comprobar">Comprobar</string>
    <string name="botonesCheck">Botones Check</string>
    <string name="marcame">Márcame</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="lblEventoChange">EtiquetaOnChange</string>
    <string name="controlesSpinner">Control Spinner</string>
    <string name="title_activity_control_spinner">ControlSpinnerActivity</string>
    <string name="controlesGrid">Control Grid</string>
    <string name="controlesRecicled">Control Recicled</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mover">Mover</string>
    <string name="cardView">UI CardView</string>
    <string name="tarjeta_1">Tarjeta Card View</string>
    <string name="tarjeta_2">Tarjeta Card View</string>
    <string name="extendedEditText">Controles Personalizados</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="pestanas">Pestañas</string>
    <string name="fragments">Fragments</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_nuevo">Nuevo</string>
</resources>
