<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button android:id="@+id/BtnFrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frameLayout" />

    <Button android:id="@+id/BtnLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearLayout" />

    <Button android:id="@+id/BtnTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tableLayout" />

    <Button android:id="@+id/BtnGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gridLayout" />

    <Button android:id="@+id/BtnRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relativeLayout" />

</LinearLayout>
