<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.sgoliver.android.holausuario.BotonesCheckActivity">

    <CheckBox
        android:id="@+id/ChkMarcame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcame"
        android:checked="false"/>
    <TextView
        android:id="@+id/LblEventoChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEventoChange"
        android:layout_below="@id/ChkMarcame"/>
    <TextView
        android:id="@+id/LblRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEtiqueta"
        android:layout_below="@id/LblEventoChange"/>

    <RadioGroup
        android:id="@+id/GrbGrupo1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LblRadioButton">

        <RadioButton
            android:id="@+id/RbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_1"/>

        <RadioButton
            android:id="@+id/RbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion_2"/>

    </RadioGroup>

</RelativeLayout>
