<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/TxtView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/TxtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/TxtView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/TxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="textPassword"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/BtnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
        <TextView android:id="@+id/LblMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>